--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <h2>About Me</h2>
                 <p>I am a Computer Science senior student at Zhejiang University (ZJU), where I will continue my academic journey as a PhD student. My research interests lie at the intersection of programming languages, deep learning systems, and software engineering.</p>
                 <p>I am particularly fascinated by the internals of popular programming languages and deep learning frameworks like PyTorch. My current research focuses on leveraging software engineering tools, specifically program analysis and testing techniques, to enhance AI systems.</p>
+                <p>I like learning using first principle like Umar Jamil. What I cannot create, I do not understand. </p>
             </section>
 
             <section id="research" class="section">
